# api/app/models/requests/UsersRequest.go
@@ -1,0 +1,18 @@
+package requests
+
+import "time"
+
+type User struct {
+	Email           string
+	Nombres         string
+	ApellidoPaterno string
+	ApellidoMaterno string
+	Telefono        string
+	FechaNacimiento time.Time
+	IDRol           int
+	IDGenero        int
+}
+type UserRequest struct {
+	User
+	Password string
+}
